<resources>
    <string name="app_name">NavigationDrawerLearn</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">SAVE</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="rating">Rating</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="price_eur">Price(eur)</string>
    <string name="mountains">Mountains</string>
    <string name="sea_side">Sea Side</string>
    <string name="city_break">City Break</string>
    <string name="trip_type">Trip Type</string>
    <string name="trip_name">Trip Name</string>
    <string name="destination">Destination</string>
</resources>
